# diplom

./: .gitignore  Dockerfile  Makefile
coverage_report_21_12/: index.html
simplePrimer/: CMakeLists.txt  (+1 more)
src/: CMakeLists.txt  Makefile  dhcp-wrapper  dhcp-wrapper_cov  main.c  mutator_dhcpv4.c  mutator_dhcpv6.c  offer_ack.pcapng  script.sh  searchBin.sh  startConnman.sh  startNetwork.sh  utils.c  utils.h
src/connman-1.32/: CMakeLists.txt  config.h.in~  configure~  default.profraw
src/connman-1.32/gdhcp/: client.c  common.c  server.c
src/connman-1.32/src/: dhcp.c  inet.c
src/connman-1.45/gdhcp/: client.c
src/cov_data/: connmand_25940.profraw  connmand_26004.profraw  connmand_26051.profraw  id:000000,time:0,execs:0,orig:dhcp_packet_1.pcap.profraw  id:000001,time:0,execs:0,orig:dhcp_packet_2.pcap.profraw  id:000002,src:000000,time:26277,execs:35,op:havoc,rep:2,+cov.profraw  merged.profdata
src/coverage_report/: index.html
src/coverage_report/coverage/home/bobro/Desktop/diplom/src/: main.c.html
src/coverage_report/coverage/home/bobro/Desktop/diplom/src/connman-1.32/: config.h.html
src/coverage_report/coverage/home/bobro/Desktop/diplom/src/connman-1.32/gdbus/: client.c.html  mainloop.c.html  object.c.html  polkit.c.html  watch.c.html
src/coverage_report/coverage/home/bobro/Desktop/diplom/src/connman-1.32/gdhcp/: client.c.html  common.c.html  common.h.html  gdhcp.h.html  ipv4ll.c.html  ipv4ll.h.html  server.c.html  unaligned.h.html
src/coverage_report/coverage/home/bobro/Desktop/diplom/src/connman-1.32/gsupplicant/: dbus.c.html  dbus.h.html  gsupplicant.h.html  supplicant.c.html
src/coverage_report/coverage/usr/include/dbus-1.0/dbus/: dbus-address.h.html  dbus-connection.h.html  dbus-macros.h.html  dbus-message.h.html  dbus-pending-call.h.html  dbus-protocol.h.html  dbus-server.h.html  dbus-shared.h.html
src/coverage_report/coverage/usr/include/glib-2.0/glib/: garray.h.html  ghash.h.html  glib-autocleanups.h.html  glist.h.html  gmacros.h.html  gmain.h.html  gmem.h.html  gmessages.h.html  gslist.h.html  gstrfuncs.h.html  gstring.h.html  gtestutils.h.html  gthread.h.html  gtypes.h.html  gutils.h.html
src/coverage_report/coverage/usr/lib/x86_64-linux-gnu/glib-2.0/include/: glibconfig.h.html
src/seeds/: dhcp_packet_00000_20251217145830.pcap  dhcp_packet_00000_20251217145831.pcap  dhcp_packet_00001_20251217145830.pcap  dhcp_packet_00002_20251217145833.pcap  dhcp_packet_00003_20251217145833.pcap  dhcp_packet_00004_20251217145839.pcap  dhcp_packet_00005_20251217145839.pcap  dhcp_packet_00006_20251217145839.pcap  dhcp_packet_00007_20251217145842.pcap  dhcp_packet_00008_20251217145842.pcap  dhcp_packet_00009_20251217145846.pcap  dhcp_packet_00010_20251217145846.pcap  dhcp_packet_00011_20251217145849.pcap  dhcp_packet_00012_20251217145849.pcap  dhcp_packet_00013_20251217145852.pcap  dhcp_packet_00014_20251217145852.pcap  dhcp_packet_00015_20251217145856.pcap  dhcp_packet_00016_20251217145856.pcap  dhcp_packet_00017_20251217145859.pcap  dhcp_packet_00018_20251217145859.pcap  dhcp_packet_00019_20251217145902.pcap  dhcp_packet_00020_20251217145902.pcap  dhcp_packet_00021_20251217145905.pcap  dhcp_packet_00022_20251217145905.pcap  dhcp_packet_00023_20251217145908.pcap  dhcp_packet_00024_20251217145908.pcap  dhcp_packet_00025_20251217145911.pcap  dhcp_packet_00026_20251217145911.pcap  dhcp_packet_00027_20251217145915.pcap  dhcp_packet_00028_20251217145915.pcap  dhcp_packet_00029_20251217145918.pcap  dhcp_packet_00030_20251217145918.pcap  dhcp_packet_00031_20251217145921.pcap  dhcp_packet_00032_20251217145921.pcap  dhcp_packet_00033_20251217145924.pcap  dhcp_packet_00034_20251217145924.pcap  dhcp_packet_00035_20251217145928.pcap  dhcp_packet_00036_20251217145928.pcap  dhcp_packet_00037_20251217145931.pcap  dhcp_packet_00038_20251217145931.pcap  (+164 more)
(+83 files in other folders)
